--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "althinect/filament-spatie-roles-permissions": "^2.2",
         "dotswan/filament-map-picker": "^1.7",
         "filament/filament": "^3.2",
+        "flowframe/laravel-trend": "^0.3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "matanyadaev/laravel-eloquent-spatial": "^4.4",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
